<resources>
    <string name="app_name">Grocery List</string>
    <string name="quantity">Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="add">Add</string>
    <string name="later_list">Later List</string>
    <string name="add_item">Add Item</string>
    <string name="swipe_right_to_strike_through_long_press_to_delete_and_swipe_left_to_move_to_later_list">Swipe right to strike through, long press to delete, and swipe left to move to \'Later List\'</string>
    <string name="view_later_list">View Later List</string>
</resources>