<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/itemNameEditText"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="@string/item_name"/>

    <EditText
        android:id="@+id/itemQuantityEditText"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="@string/quantity"
        android:inputType="number"/>

    <Button
        android:id="@+id/addItemDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@color/textColor"
        android:text="@string/add"/>

</LinearLayout>
